...
                  const SizedBox(
                    height: 10,
                  ),

                  //passenger count input
                  NormalInput(
                      key: Key("passengerInput"),
                      keyboardType: TextInputType.number,
                      icon: const Icon(Icons.person),
                      controller: _PasegerCount,
                      labelText: "pasengers",
                      obscureText: false),

...
                      //search train button
                      decoration: BoxDecoration(
                        color: Color.fromARGB(255, 0, 70, 199),
                        borderRadius: BorderRadius.circular(10),
                      ),
                      child: TextButton(
                        key: Key("available_trains"),
                        child: const Text("Available Trains",
                            style: TextStyle(
                                fontSize: 20,
                                color: Colors.white,
                                fontWeight: FontWeight.bold)),
                        onPressed: () {
...
