...
                      border:
                          Border.all(color: Color.fromARGB(255, 255, 255, 255)),
                      borderRadius: BorderRadius.circular(20)),
                  child: Align(
                    alignment: Alignment.centerLeft,
                    child: TextButton(
                      key: const Key("getStarted"),
                      onPressed: () {
                        //redirect to the take input page
                        Navigator.push(
                            context,
                            CupertinoPageRoute(
                                builder: (context) => FirstPage()));
...
